Update create.html with comments and navigation.

--- a/create.html
+++ b/create.html
@@ -9,9 +9,9 @@
 
 <body>
 
-    <!-- Top nav bar -->
     <h1>Personalized Music Database: Create</h1>
 
+    <!-- Top nav bar -->
     <div id="topnav">
         <a href="main.html">Home</a>
         <a href="create.html">Create</a>
@@ -20,14 +20,14 @@
 
     <hr />
 
-    <div id="createOp">
+    <!-- Create by: button options. Navigates to new page to add content to database -->
+    <div class="pgOps">
         <a href="createSong.html">Create Song</a>
         <a href="createArtist.html">Create Artist</a>
         <a href="createAlbum.html">Create Album</a>
-        <a href="createPlaylist.html">Create Playlist</a>
+
+        <!-- <a href="createPlaylist.html">Create Playlist</a> -->
     </div>
-
-
 
 </body>
 
